--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ form { display: flex;
       width: 300px; 
       height: 200px; 
       border: 1px solid #ccc; 
-      background-color: #ffffff; 
+      background-color: #f8f8f8; 
       padding: 16px; box-sizing: 
         border-box; } 
 input, select, textarea { 
@@ -34,7 +34,7 @@ input, select, textarea {
     box-sizing: border-box; 
     border: 1px solid #ccc;
     border-radius: 4px; 
-    background-color: #ffffff; } 
+    background-color: #f8f8f8; } 
 input:focus, select:focus, textarea:focus {
     outline: none; } 
 label { 
