--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ form { display: flex;
       border: 1px solid #ccc; 
       background-color: #f8f8f8; 
       padding: 16px; box-sizing: 
-        border-box; } 
+        content-box; } 
 input, select, textarea { 
     display: block; 
     margin-bottom: 8px; width: 100%; 
