--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ border: 1px solid #ddd;
 
 .form-inline button {
 padding: 10px 20px;
-background-color: dodgerblue;
+background-color: white;
 border: 1px solid #ddd;
-color: white;
+color: black;
 }
 
 .form-inline button:hover {
